--- a/Javascript_Tutorial.tex
+++ b/Javascript_Tutorial.tex
@@ -1056,11 +1056,151 @@ In this we covered some important concepts about functions:
 \end{itemize}
 It is good to be aware of the differences between function expressions, arrow functions, and function declarations. As you program more in JavaScript, you will see a wide variety of how these function types are used. 
 
+\newpage
+\section{Scope}
+\subsection{Scope}
+An important idea in programming is \textit{scope}. Scope defines where variables can be accessed or referenced. While some variables can be accessed from anywhere within a program, other variables may only be available in a specific context. \\
+\newline
+You can think of scope like the view of the night sky from your window. Everyone who lives on the planet Earth is in the global scope of the stars. The stars are accessible \textit{globally}. Meanwhile, if you live in a city, you may see the city skyline or the river. The skyline and river are only accessible \textit{locally} in your city, but you can still see the stars that are available globally. \\
+\newline
+Over the next few chapters, we will explore how scope relates to variables and learn best practices for variable declaration.
 
+\subsection{Blocks and Scope}
+Before we talk more about scope, we first need to talk about \textit{blocks}. We have seen blocks used before in functions and \colorbox{lightgray}{if} statements. A block is the code found inside a set of curly braces \colorbox{lightgray}{\{\}}. Blocks help us group one or more statements together and serve as an important structural marker for our code. \\
+\newline
+A block of code could be a function, like this: 
+\begin{lstlisting}
+const logSkyColor = () => {
+  let color = "blue"; 
+  console.log(color); // blue 
+};
+\end{lstlisting}
+Notice that the function body is actually a block of code. Observe the block in an \colorbox{lightgray}{if} statement:
+\begin{lstlisting}
+if (dusk) {
+  let color = "pink";
+  console.log(color); // pink
+};
+\end{lstlisting}
+In the next few chapters, we will see how blocks define the scope of variables.
 
+\subsection{Global Scope}
+Scope is the context in which our variables are declared. We think about scope in relation to blocks because variables can exist either outside of or within these blocks. \\
+\newline
+In \textit{global scope}, variables are declared outside of blocks. These variables are called \textit{global variables}. Because global variables are not bound inside a block, they can be accessed by any code in the program, including code in blocks. \\
+\newpage
+Let us take a look at an example of global scope:
+\begin{lstlisting}
+const color = "blue"
 
+const returnSkyColor = () => {
+  return color; // blue 
+};
 
+console.log(returnSkyColor()); // blue
+\end{lstlisting}
+\begin{itemize}[leftmargin = *]
+\item Even though the \colorbox{lightgray}{color} variable is defined outside of the block, it can be accessed in the function block, giving it global scope.
+\item In turn, \colorbox{lightgray}{color} can be accessed within the \colorbox{lightgray}{returnSkyColor} function block.
+\end{itemize}
 
+\subsection{Block Scope}
+The next context we will cover is \textit{block scope}. When a variable is defined inside a block, it is only accessible to the code within the curly braces \colorbox{lightgray}{\{\}}. We say that variable has \textit{block scope} because it is \textit{only} accessible to the lines of code within that block. \\
+\newline
+Variables that are declared with block scope are known as \textit{local variables} because they are only available to the code that is part of the same block. \\
+\newline
+Block scope works like this:
+\begin{lstlisting}
+const logSkyColor = () => {
+  let color = "blue"; 
+  console.log(color); // blue 
+};
+
+logSkyColor(); // blue 
+console.log(color); // ReferenceError
+\end{lstlisting}
+We will notice:
+\begin{itemize}[leftmargin = *]
+\item We define a function  \colorbox{lightgray}{logSkyColor()}.
+\item Within the function, the  \colorbox{lightgray}{color} variable is only available within the curly braces of the function.
+\item If we try to log the same variable outside the function, throws a  \colorbox{lightgray}{ReferenceError}.
+\end{itemize}
+
+\subsection{Scope Pollution}
+It may seem like a great idea to always make your variables accessible, but having too many global variables can cause problems in a program. \\
+\newline
+When you declare global variables, they go to the \textit{global namespace}. The global namespace allows the variables to be accessible from anywhere in the program. These variables remain there until the program finishes which means our global namespace can fill up really quickly. \\
+\newline
+\textit{Scope pollution} is when we have too many global variables that exist in the global namespace, or when we reuse variables across different scopes. Scope pollution makes it difficult to keep track of our different variables and sets us up for potential accidents. For example, globally scoped variables can collide with other variables that are more locally scoped, causing unexpected behavior in our code. \\
+\newline
+Let us look at an example of scope pollution in practice so we know how to avoid it:
+\begin{lstlisting}
+let num = 50;
+
+const logNum = () => {
+  num = 100; // Take note of this line of code
+  console.log(num);
+};
+
+logNum(); // Prints 100
+console.log(num); // Prints 100
+\end{lstlisting}
+We will notice:
+\begin{itemize}[leftmargin = *]
+\item We have a variable \colorbox{lightgray}{num}.
+\item Inside the function body of \colorbox{lightgray}{logNum()}, we want to declare a new variable but forgot to use the \colorbox{lightgray}{let} keyword.
+\item When we call \colorbox{lightgray}{logNum()}, \colorbox{lightgray}{num} gets reassigned to \colorbox{lightgray}{100}.
+\item The reassignment inside \colorbox{lightgray}{logNum()} affects the global variable \colorbox{lightgray}{num}.
+\item Even though the reassignment is allowed and we will not get an error, if we decided to use \colorbox{lightgray}{num} later, we’ll unknowingly use the new value of \colorbox{lightgray}{num}.
+\end{itemize}
+While it is important to know what global scope is, it is best practice to not define variables in the global scope.
+
+\subsection{Practice Good Scoping}
+Given the challenges with global variables and scope pollution, we should follow best practices for scoping our variables as tightly as possible using block scope. \\
+\newline
+Tightly scoping your variables will greatly improve your code in several ways:
+\begin{itemize}[leftmargin = *]
+\item It will make your code more legible since the blocks will organize your code into discrete sections. 
+\item It makes your code more understandable since it clarifies which variables are associated with different parts of the program rather than having to keep track of them line after line! 
+\item It is easier to maintain your code, since your code will be modular.
+\item It will save memory in your code because it will cease to exist after the block finishes running.
+\end{itemize}
+Here is another example of how to use block scope, as defined within an \colorbox{lightgray}{if} block:
+\begin{lstlisting}
+const logSkyColor = () => {
+  const dusk = true;
+  let color = "blue"; 
+  if (dusk) {
+    let color = "pink";
+    console.log(color); // pink
+  }
+  console.log(color); // blue 
+};
+
+console.log(color); // ReferenceError
+\end{lstlisting}
+Here, we will notice:
+\begin{itemize}[leftmargin = *]
+\item We create a variable \colorbox{lightgray}{dusk} inside the \colorbox{lightgray}{logSkyColor()} function.
+\item After the \colorbox{lightgray}{if} statement, we define a new code block with the \colorbox{lightgray}{\{\}} braces. Here we assign a new value to the variable \colorbox{lightgray}{color} if the \colorbox{lightgray}{if} statement is truthy.
+\item Within the \colorbox{lightgray}{if} block, the \colorbox{lightgray}{color} variable holds the value \colorbox{lightgray}{`pink'}, though outside the \colorbox{lightgray}{if} block, in the function body, the \colorbox{lightgray}{color} variable holds the value \colorbox{lightgray}{`blue'}.
+\item While we use block scope, we still pollute our namespace by reusing the same variable name twice. A better practice would be to rename the variable inside the block.
+\end{itemize}
+Block scope is a powerful tool in JavaScript, since it allows us to define variables with precision, and not pollute the global namespace. If a variable does not need to exist outside a block, then it should not!
+
+\subsection{Review: Scope}
+In this chapter, you learned about scope and how it impacts the accessibility of different variables. \\
+Let us review the following terms:
+\begin{itemize}[leftmargin = *]
+\item \textbf{Scope} is the idea in programming that some variables are accessible/inaccessible from other parts of the program.
+\item \textbf{Blocks} are statements that exist within curly braces \colorbox{lightgray}{\{\}}.
+\item \textbf{Global scope} refers to the context within which variables are accessible to every part of the program.
+\item \textbf{Global variables} are variables that exist within global scope.
+\item \textbf{Block scope} refers to the context within which variables that are accessible only within the block they are defined.
+\item \textbf{Local variables} are variables that exist within block scope.
+\item \textbf{Global namespace} is the space in our code that contains globally scoped information.
+\item \textbf{Scope pollution} is when too many variables exist in a namespace or variable names are reused.
+\end{itemize}
 
 
 
